[gd_scene load_steps=8 format=3 uid="uid://dvlgx5x6ybemp"]

[ext_resource type="Script" uid="uid://dn4en13vsnquq" path="res://UI Menus/Scripts/credits_menu.gd" id="1_ppbma"]
[ext_resource type="Texture2D" uid="uid://cu76l1ywlwy2u" path="res://UI Menus/AssetsUIMenus/credits-01-01.png" id="2_ayk42"]
[ext_resource type="Texture2D" uid="uid://c4g6e0mc2i8nx" path="res://UI Menus/AssetsUIMenus/credits-02-01.png" id="3_0o0af"]
[ext_resource type="Texture2D" uid="uid://de0vvfkmhg8x7" path="res://UI Menus/AssetsUIMenus/Main Menu Unclicked-01.png" id="3_4kwi5"]
[ext_resource type="Texture2D" uid="uid://q080yveve548" path="res://UI Menus/AssetsUIMenus/Main Menu Clicked-01.png" id="4_oexpy"]
[ext_resource type="AudioStream" uid="uid://b0kajlye535gc" path="res://test_erin/Scenes/button-305770.mp3" id="5_oexpy"]
[ext_resource type="AudioStream" uid="uid://c5vcx4jtpw2o6" path="res://Sounds/title_screen_music.mp3" id="6_73bfd"]

[node name="CreditsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ppbma")

[node name="image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.009
anchor_bottom = 1.0
offset_right = -0.368042
texture = ExtResource("2_ayk42")
expand_mode = 1

[node name="page2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.009
anchor_bottom = 1.0
offset_right = -0.368042
texture = ExtResource("3_0o0af")
expand_mode = 1

[node name="back" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013
anchor_right = 0.274
anchor_bottom = 0.313
offset_left = 12.024
offset_top = -3.0
offset_right = 0.35199
offset_bottom = 0.17598
texture_normal = ExtResource("3_4kwi5")
texture_pressed = ExtResource("4_oexpy")
ignore_texture_size = true
stretch_mode = 0

[node name="clickingButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_oexpy")

[node name="background" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_73bfd")
autoplay = true

[node name="next" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.815
anchor_top = 0.082
anchor_right = 0.942
anchor_bottom = 0.19
offset_left = 0.119934
offset_top = -0.136002
offset_right = -0.184082
offset_bottom = -0.12001
text = "Next
"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
